2004-04-26  Marcus Brinkmann  <marcus@gnu.org>

	* l4/ipc.h (__L4_map_item_t, __L4_grant_item_t,
	__L4_string_item_t): New member MR.
	(_L4_msg_append_map_item): Fix use of map_item.
	(_L4_msg_put_map_item): Likewise.
	(_L4_msg_get_map_item): Likewise.
	(_L4_msg_append_grant_item): Fix use of grant_item.
	(_L4_msg_put_grant_item): Likewise.
	(_L4_msg_get_grant_item): Likewise.
	(_L4_msg_append_simple_string_item): Fix use of string item.
	(_L4_msg_append_string_item): Likewise.
	(_L4_msg_put_string_item): Likewise.
	(_L4_msg_get_string_item): Likewise.

2004-04-23  Marco Gerards  <metgerards@student.han.nl>

	* l4/thread.h (__L4_STOP): Don't use _L4_XCHG_REGS_SET_SP and
	_L4_XCHG_REGS_SET_IP.

2004-04-21  Marco Gerards  <metgerards@student.han.nl>

	* Makefile.am (common_headers, l4_headers): Add sigma0.h.
	* headers.m4: Add libl4/l4/sigma0.h, libl4/l4/compat/sigma0.h
	and libl4/l4/gnu/sigma0.h.
	* l4/sigma0.h, l4/compat/sigma0.h, l4/gnu/sigma0.h: New files.

2004-04-21  Marcus Brinkmann  <marcus@gnu.org>

	* l4/gnu/space.h (L4_FPAGE_SPAN_MAX): Increase value.

2004-04-19  Marcus Brinkmann  <marcus@gnu.org>

	* l4/gnu/ipc.h (l4_msg_tag_set_label,
	(l4_msg_tag_set_untyped_words, l4_msg_tag_set_typed_words): New
	functions.

2004-04-10  Marcus Brinkmann  <marcus@gnu.org>

	* l4/thread.h (_L4_THREAD_VERSION_BITS, _L4_THREAD_NO_BITS,
	_L4_anylocalthread): Fix macro.

	* l4/pagefault.h, l4/gnu/pagefault.h: New files.
	* Makefile.am (gnu_headers): Add pagefault.h.
	(l4_headers): Likewise.
	* headers.m4: Add l4/pagefault.h and l4/gnu/pagefault.h.

	* l4/thread-start.h, l4/gnu/thread-start.h: New files.
	* Makefile.am (gnu_headers): Add thread-start.h.
	(l4_headers): Likewise.
	* headers.m4: Add l4/thread-start.h and l4/gnu/thread-start.h.

	* l4/gnu/space.h (L4_FPAGE_SPAN_MAX): New macro.
	(l4_fpage_span): New function.

2004-04-06  Marcus Brinkmann  <marcus@gnu.org>

	* l4/gnu/ipc.h: Revert last change.  Local IPC must always include
	a send and a receive phase.
