@@ -1,3 +1,10 @@
+2004-08-02  Peter Bruin  <pjbruin@dds.nl>
+
+	* powerpc/l4/bits/math.h (__L4_msb): Count leading zeros of
+	`data' instead of `data & -data'.
+	(__L4_lsb): Call __L4_msb instead of __l4_msb.  Remove unused
+	variable `lsb'.
+
 2004-04-26  Marcus Brinkmann  <marcus@gnu.org>
 
 	* l4/ipc.h (__L4_map_item_t, __L4_grant_item_t,
